Archive2/b5/f4e5b1cc3295f0/output
main.cpp: In member function 'void LinkedList<T, Comparer>::insert(T&)':
main.cpp:11:24: error: 'current_item' was not declared in this scope
       if ( comp(value, current_item) ) // tests if value > current_item
                        ^
main.cpp:12:3: error: expected primary-expression before '}' token
   }
   ^
